--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.8.2",
     "clsx": "^2.1.1",
+    "firebase": "^11.4.0",
     "install": "^0.13.0",
     "lucide-react": "^0.479.0",
     "motion": "^12.4.10",
