--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,13 @@
     "install": "^0.13.0",
     "lucide-react": "^0.479.0",
     "motion": "^12.4.10",
+    "openai": "^4.87.3",
     "react": "^19.0.0",
     "react-alice-carousel": "^2.9.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-speech-recognition": "^3.10.0",
     "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
